.provarCaches/00D410000011HE0EAM/objects/rstk__indentedbom__c.object
<CustomObject>
    <description>indentedbom__c ibom</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_adddate__c</fullName>
        <inlineHelpText>The Date record was added.</inlineHelpText>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_addrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Revision</inlineHelpText>
        <label>Add Rev</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs (Phase-in Rev)</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_addrevno__c</fullName>
        <inlineHelpText>Revision</inlineHelpText>
        <label>Add Rev</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_addsts__c</fullName>
        <inlineHelpText>Status</inlineHelpText>
        <label>Add Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_bomlink__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs (Component)</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_compitem_no__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_costdecimalprecision__c</fullName>
        <inlineHelpText>Defines the number of decimals to be displayed in the Costed BOM being run.  Valid values are whole numbers between 0 and 6, inclusive.</inlineHelpText>
        <label>Cost Decimal Precision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ibom_deldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Del Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_delrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Del Rev</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs (Phase-out Rev)</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_delrevno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Del Rev</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_delsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Del Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_displaymode__c</fullName>
        <inlineHelpText>Determines whether the results display in a Tree View (interactive) mode or a Grid style list.</inlineHelpText>
        <label>Display Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tree View</fullName>
                    <default>true</default>
                    <label>Tree View</label>
                </value>
                <value>
                    <fullName>List View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ibom_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>diviboms</relationshipLabel>
        <relationshipName>diviboms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_effdate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <inlineHelpText>Effective Date for Component selection.</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_effrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Eff Rev</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_implonly__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Display Implemented Components only</inlineHelpText>
        <label>Implemented Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_iscostedbom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Costed Bom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_itemdescr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_lab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_level__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_mtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Material Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_ohd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Overhead Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_parentitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item number for the Assembly</inlineHelpText>
        <label>Parent Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_pdf__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_pebom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>BOM Link</label>
        <referenceTo>rstk__pebom__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_picklistfilter__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PickListFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_qtyper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty/Per</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_reporttype__c</fullName>
        <inlineHelpText>This defines which version of the Cost BOM report you wish to run.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rstk__ibom_picklistfilter__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Single Level Standard</fullName>
                </value>
                <value>
                    <fullName>Single Level Simulated</fullName>
                </value>
                <value>
                    <fullName>Single Level Historical</fullName>
                </value>
                <value>
                    <fullName>Cumulative Standard</fullName>
                    <default>true</default>
                    <label>Cumulative Standard</label>
                </value>
                <value>
                    <fullName>Cumulative Simulated</fullName>
                </value>
                <value>
                    <fullName>Cumulative Historical</fullName>
                </value>
                <value>
                    <fullName>Average Cost</fullName>
                </value>
                <value>
                    <fullName>Cost Rollup Single Level Simulated</fullName>
                </value>
                <value>
                    <fullName>Cost Rollup Cumulative Simulated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__ibom_scrappct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_setupqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup Qty</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_singlelevelonly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Display Components for Single Level only.</inlineHelpText>
        <label>Single Level Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_src__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_sub__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Subcontract Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_totalunitcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_unitcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_uom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM</label>
        <referenceTo>rstk__syuom__c</referenceTo>
        <relationshipLabel>ZZ-Indented BOMs (UOM)</relationshipLabel>
        <relationshipName>ZZ_Indented_BOMs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_uomno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>UOM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__ibom_yield__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Yield</label>
        <precision>14</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ-Indented BOM</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ZZ-Indented BOM Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-Indented BOMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>